2008-03-23 - Eric Laffoon <sequitur@kde.org>
    o Table - added keepCellVisible for my application - I will need to clean up the code if I want to release it as I want to rename some things and do other cleanup
    o ComboBox - added popupList to bring up the list without using the mouse - faster data entry
2008-03-22 - Eric Laffoon <sequitur@kde.org>
    o LineEdit - added gotfocus event
2008-03-20 - Eric Laffoon <sequitur@kde.org>
    o made actions sort along with widgets in the connection dialog
    o Tree/Detail (ListView) widget - enabled adding columns
    o Tree/Detail (ListView) widget - enabled removing columns (copied from table widget)
    o Tree/Detail (ListView) widget - return column count
    o Tree/Detail (ListView) widget - return column caption for given index
    o Tree/Detail (ListView) widget - set sort column and where ASC or DESC
    o Tree/Detail (ListView) widget - set column width - serves as hide colum at 0 width
    o Table widget - add column sort that does by whole rows - doesn't do well with float as strings :(
    o TextEdit - added lostFocus event
    o LineEdit - added gotFocus event
    o fixed about dialog license to take text and files correctly
2008-03-19 - Andras Mantia <amantia@kde.org>
    o regression: add back the missing str_compare function. 
2008-03-18 - Eric Laffoon <sequitur@kde.org>
    o raised the number of allowed paramaters for scripts
2008-03-10 - Eric Laffoon <sequitur@kde.org>
    o enable additional slots in dialog and restore slots for actions - you can now directly manipulate actions on a MainWindow via signals and slots from the dialog
2008-01-20 - Eric Laffoon <sequitur@kde.org>
    o set new functions only available to new parser such as createWidget to not be shown in the function browser if the old parser is run.

January 2008 - Andras Mantia <amantia@kde.org>
    o support executing of slots
    o add "execute" method for PushButton
    o possibility to pass parameters for ScriptObject added