@@ -1,4 +1,6 @@
 2008-03-23 - Eric Laffoon <sequitur@kde.org>
+    o it's about time scripts had a boolean execute slot!
+2008-03-23 - Eric Laffoon <sequitur@kde.org>
     o Table - added keepCellVisible for my application - I will need to clean up the code if I want to release it as I want to rename some things and do other cleanup
     o ComboBox - added popupList to bring up the list without using the mouse - faster data entry
 2008-03-22 - Eric Laffoon <sequitur@kde.org>
